# r3mes

./: .env.example  .env.production.template  .gitignore  BACKEND_API_COMPREHENSIVE_DOCUMENTATION.md  BACKEND_SECURITY_IMPLEMENTATION.md  BLOCKCHAIN_KEEPER_REFACTORING_COMPLETE.md  BLOCKCHAIN_NODE_COMPREHENSIVE_DOCUMENTATION.md  CHANGELOG.md  CLI_TOOLS_COMPREHENSIVE_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DESKTOP_LAUNCHER_COMPREHENSIVE_DOCUMENTATION.md  INSTALLATION.md  LICENSE  MINER_ENGINE_COMPREHENSIVE_DOCUMENTATION.md  Makefile  QUICK_DEPLOY.md  QUICK_START.md  README.md  README_INSTALLATION.md  RELEASE_NOTES.md  SECURITY.md  SENIOR_IMPLEMENTATION_COMPLETE.md  TEST_GUIDE.md  WEB_DASHBOARD_ACTION_ITEMS.md  WEB_DASHBOARD_ANALYSIS_SUMMARY.md  WEB_DASHBOARD_COMPREHENSIVE_ANALYSIS.md  WEB_DASHBOARD_COMPREHENSIVE_DOCUMENTATION.md  WEB_DASHBOARD_DEEP_ANALYSIS.md  WSL_WINDOWS_SETUP_GUIDE.md  eksik.md  genesis_traps.json  genesis_vault_entries.json  genesis_vault_entries_array.json  install.ps1  install.sh  main.py  merge_md.py  netfliylog.txt  (+7 more)
desktop-launcher-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-launcher-tauri/src-tauri/icons/: README.md  create_placeholder_icons.py
desktop-launcher-tauri/src-tauri/src/: commands.rs  config.rs  debug.rs  engine_downloader.rs  hardware_check.rs  inference.rs  installer.rs  ipfs_manager.rs  keychain.rs  log_reader.rs  main.rs  model_downloader.rs  platform.rs  process_manager.rs  setup_checker.rs  status_monitor.rs  updater.rs  wallet.rs  websocket_client.rs
desktop-launcher-tauri/src-tauri/src/tests/: config_tests.rs  keychain_tests.rs  mod.rs  platform_tests.rs  process_manager_tests.rs  wallet_tests.rs
miner-engine/: .env.example  .gitignore  Dockerfile.miner  ERROR_HANDLING_GUIDE.md  README.md  TRANSACTION_HASH_IMPLEMENTATION_PLAN.md  create_base_model.py  docker-compose.miner.yml  env.production.example  fix_tls_config.py  gradient_pb2.py  miner_engine.py  pyinstaller.spec  pyproject.toml  requirements.txt  test_miner.py  test_model_inference.py
miner-engine/bridge/: README.md  __init__.py  arrow_flight_client.py  arrow_flight_server.py  blockchain_client.py  blockchain_queries.py  crypto.py  generate_proto.sh  proof_of_work.py  seed_client.py  tendermint_client.py  transaction_builder.py  verification_server.py
miner-engine/bridge/proto/: __init__.py
miner-engine/bridge/proto/amino/: __init__.py  amino_pb2.py
miner-engine/bridge/proto/cosmos/: __init__.py
miner-engine/bridge/proto/cosmos_proto/: __init__.py  cosmos_pb2.py
miner-engine/cache/: __init__.py  tiered_cache.py  vram_manager.py
miner-engine/config/: default.yaml  local.yaml  production.yaml
miner-engine/core/: __init__.py  aggregation.py  atomic_coordinator.py  binary_serialization.py  bitlinear.py  constants.py  coordinator.py  deterministic.py  dora.py  dora_trainer.py  exceptions.py  gradient_accumulator.py  gradient_compression.py  inference_backend.py  merkle.py  multi_gpu_trainer.py  proof_of_reuse.py  rag_augmented_trainer.py  seed_locking.py  serialization.py  similarity.py  trainer.py  trap_jobs.py  types.py  validation.py  verification.py
miner-engine/core/backends/: __init__.py  bitnet_cpp_backend.py  pytorch_backend.py  triton_backend.py
miner-engine/docker/: .dockerignore  Dockerfile.amd  Dockerfile.go  Dockerfile.intel  Dockerfile.nvidia  README.md  docker-compose.yml
miner-engine/pipeline/: __init__.py  gradient_submission.py  model_update.py
miner-engine/privacy/: __init__.py  sgx_integration_guide.md  tee_privacy.py
miner-engine/proto/: gradient.proto
miner-engine/r3mes/: __init__.py  debug_config.py  debug_tracer.py  performance_profiler.py  tracing.py
miner-engine/r3mes/cli/: __init__.py  blockchain.py  commands.py  config.py  continuous_mining.py  main.py  proposer_commands.py  serving_commands.py  setup.py  wallet.py  wizard.py
miner-engine/r3mes/miner/: __init__.py  bitnet_quantization.py  chunk_processor.py  engine.py  gguf_loader.py  inference_server.py  llama_loader.py  lora_manager.py  model_loader.py  stats_http_server.py  stats_server.py  task_pool_client.py  vram_profiler.py
miner-engine/r3mes/proposer/: __init__.py  aggregator.py
miner-engine/r3mes/serving/: __init__.py  engine.py  inference_pipeline.py
miner-engine/r3mes/utils/: __init__.py  cuda_check.py  cuda_installer.py  endpoint_checker.py  faucet.py  firewall_check.py  hardware_check.py  ipfs_manager.py  time_sync.py  version_checker.py
miner-engine/rag/: __init__.py  embedder.py  faiss_store.py  retriever.py
miner-engine/router/: __init__.py  hybrid_router.py  keyword_router.py  semantic_router.py  vram_adaptive_gating.py
miner-engine/scripts/: build_and_upload_pypi.sh  build_windows_binary.py  check_cuda.ps1  create_engine_package.sh  r3mes-manager.py  setup.py  setup_windows.ps1
miner-engine/tests/: test_atomic_coordinator.py  test_blockchain_integration.py  test_cache.py  test_deterministic_execution.py  test_dora.py  test_dora_trainer.py  test_hybrid_router.py  test_inference_backend.py  test_inference_pipeline.py  test_integration_full.py  test_integration_pipeline.py  test_property_bitnet.py  test_rag.py  test_rag_embedder.py  test_rag_retriever.py  test_registry_security.py  test_router.py  test_semantic_router.py  test_serving_engine_integration.py  test_trainer.py  test_verification.py
miner-engine/utils/: __init__.py  adapter_registry.py  advanced_config.py  api_doc_generator.py  dataset_registry.py  deserialize_gradient.py  download_manager.py  environment_validator.py  error_handling.py  gpu_detection.py  ipfs_client.py  log_streamer.py  logger.py  model_registry.py  monitoring_dashboard.py  performance_monitor.py  shard_assignment.py  unified_registry.py  verification.py
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/r3mes/: __init__.py  blockchain.py  client.py  errors.py  exceptions.py  governance.py  miner.py  proposer.py  serving.py  wallet.py
sdk/python/tests/: __init__.py  test_client.py  test_miner.py  test_wallet.py
(+1120 files in other folders)
