[package]
name = "r3mes-desktop-launcher"
version = "0.1.0"
description = "R3MES Desktop Launcher - Native process management"
authors = ["R3MES Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "process-exit", "shell-execute", "process-relaunch", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
cosmrs = { version = "0.15", features = ["cosmwasm"] }
bip39 = { version = "2.0", features = ["rand"] }
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
lazy_static = "1.4"
# WebSocket support for real-time updates
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
num_cpus = "1.16"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

